--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,79 @@
-asgiref==3.2.3
-certifi==2019.11.28
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.0
+certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
-Django==3.0.2
+Click==7.0
+colorama==0.4.3
+cryptography==2.8
+decorator==4.4.1
+defusedxml==0.6.0
+Django==2.2.7
+django-rest-knox==4.1.0
+djangorestframework==3.10.3
+entrypoints==0.3
+future==0.18.2
+gunicorn==20.0.4
 idna==2.8
+importlib-metadata==1.3.0
+ipykernel==5.1.3
+ipython==7.10.2
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.15.1
+Jinja2==2.10.3
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+more-itertools==8.0.2
+nbconvert==5.6.1
+nbformat==4.4.0
+notebook==6.0.2
+numpy==1.17.4
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.2
+pickleshare==0.7.5
 Pillow==7.0.0
+pipenv==2018.11.26
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
+pyaes==1.6.1
+pyasn1==0.4.8
+pycparser==2.19
+Pygments==2.5.2
+PyQt5==5.13.0
+PyQt5-sip==12.7.0
+pyqt5-tools==5.13.0.1.5
+pyrsistent==0.15.6
+pyTelegramBotAPI==3.6.7
+python-dateutil==2.8.1
+python-dotenv==0.10.3
+python-telegram-bot==12.2.0
 pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
+pyzmq==18.1.1
+qtconsole==4.6.0
 requests==2.22.0
+rsa==4.0
+Send2Trash==1.5.0
+six==1.13.0
 sqlparse==0.3.0
+Telethon==1.10.8
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+traitlets==4.3.3
 urllib3==1.25.7
+virtualenv==16.7.8
+virtualenv-clone==0.5.3
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==0.6.0
